@@ -1,4 +1,7 @@
 2009-05-31
+- fixed issue 71 : time format %T %r
+
+2009-05-31
 - fixed issue 86 : padding bug
 
 2009-05-31
